--- a/main.html
+++ b/main.html
@@ -292,13 +292,13 @@
     <!-- Footer -->
     <footer class="bg-stone-800 text-stone-300 mt-20">
       <div class="container mx-auto px-4 sm:px-6 lg:px-8 py-8 text-center">
-        <p class="font-bold text-lg text-white">Kamu Adalah Kaptennya!</p>
+        <p class="font-bold text-lg text-white">Meraih Pengasih</p>
         <p class="mt-2 max-w-xl mx-auto">
           Gunakan internet secara Cerdas, Berhati-hati, dan Bertanggung Jawab.
           Jadilah Jagoan Siber yang menyebarkan hal-hal positif.
         </p>
         <p class="mt-6 text-sm text-stone-400">
-          &copy; 2025 Jagoan Siber. Dibuat untuk edukasi.
+          &copy; 2025 Jagoan Siber. Zufar Athoya Bahar.
         </p>
       </div>
     </footer>
