--- a/main.html
+++ b/main.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Jagoan Siber: Panduan Aman Dunia Maya</title>
-    <link rel="icon" href="path/to/your-logo.ico" type="image/x-icon">
+    <link rel="icon" href="logo_kkn_pengasih.png" type="image/x-icon">
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
